<resources>
    <string name="app_name">Ambunow</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_header_title">Daftar Akun</string>
    <string name="register_header_description">Masukkan identitas yang diperlukan untuk dapat menggunakan semua fitur aplikasi</string>
    <string name="title_full_name">Nama Lengkap</string>
    <string name="hint_full_name">Nama lengkap anda</string>
    <string name="title_phone_number">No. HP</string>
    <string name="hint_phone_number">Nomor handphone anda</string>
    <string name="title_email">Email</string>
    <string name="hint_email">Masukkan email</string>
    <string name="title_password">Password</string>
    <string name="title_password_confirmation">Konfirmasi Password</string>
    <string name="hint_password">Masukkan password</string>
    <string name="title_next">Selanjutnya</string>
    <string name="login_header_title">Selamat Datang</string>
    <string name="login_header_description">Masukkan email dan password dari akun yang pernah kamu buat sebelumnya</string>
    <string name="text_login_no_account">Belum punya akun? Daftar</string>
    <string name="title_login">Masuk</string>
    <string name="error_field_password">Kata sandi wajib diisi</string>
    <string name="error_field_email">Alamat email wajib diisi</string>
    <string name="error_field_email_not_valid">Alamat email harus berupa alamat yang valid</string>
    <string name="message_error_no_internet">Ada yang salah dengan koneksi internet. Pastikan Anda memiliki Sambungan Internet dan coba lagi.</string>
    <string name="message_error_unknown">Terjadi kesalahan. Silakan coba lagi.</string>
    <string name="message_error_invalid_credentials">Kata sandi yang Anda masukkan salah. Silakan coba lagi.</string>
    <string name="message_error_invalid_user">Kredensial yang Anda masukkan tidak valid. Silakan periksa kembali alamat email dan kata sandi Anda, dan coba lagi.</string>
    <string name="title_ok">Okay</string>
    <string name="message_error_something_went_wrong">Ups, terjadi kesalahan!</string>
</resources>